name:                free-me
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/free-me#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable free-me
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , free-me

library
  exposed-modules:   Free
                   , MiMo
  default-language:  Haskell2010
  build-depends:     base >= 4.7 && < 5
  hs-source-dirs:    src
  if impl(ghc >= 8.0)
    ghc-options: -Wall -Wno-redundant-constraints
  else
    ghc-options: -Wall
